handle replacement that has not yet joined